chore(answers): clap answers #11
