# back-end/src/handlers/answers.ts
@@ -5,11 +5,13 @@
 import { DynamoDB, RCError, ResourceController, SES } from 'idea-aws';
 
 import { isEmailInBlockList } from './sesNotifications';
+import { addBadgeToUser } from './badges';
 
 import { Topic } from '../models/topic.model';
 import { Question } from '../models/question.model';
 import { Answer } from '../models/answer.model';
 import { User } from '../models/user.model';
+import { Badges } from '../models/userBadge.model';
 
 ///
 /// CONSTANTS, ENVIRONMENT VARIABLES, HANDLER
@@ -20,7 +22,8 @@ const STAGE = process.env.STAGE;
 const DDB_TABLES = {
   questions: process.env.DDB_TABLE_questions,
   topics: process.env.DDB_TABLE_topics,
-  answers: process.env.DDB_TABLE_answers
+  answers: process.env.DDB_TABLE_answers,
+  answersClaps: process.env.DDB_TABLE_answersClaps
 };
 const ddb = new DynamoDB();
 
@@ -136,6 +139,63 @@ class Answers extends ResourceController {
     return await this.putSafeResource({ noOverwrite: false });
   }
 
+  protected async patchResource(): Promise<Question | { clapped: boolean }> {
+    switch (this.body.action) {
+      case 'CLAP':
+        return await this.clap();
+      case 'CLAP_CANCEL':
+        return await this.clap(true);
+      case 'IS_CLAPPED':
+        return { clapped: await this.isClapped() };
+      default:
+        throw new RCError('Unsupported action');
+    }
+  }
+  private async clap(cancel = false): Promise<Question> {
+    if (cancel)
+      await ddb.delete({
+        TableName: DDB_TABLES.answersClaps,
+        Key: { answerId: this.answer.answerId, userId: this.galaxyUser.userId }
+      });
+    else
+      await ddb.put({
+        TableName: DDB_TABLES.answersClaps,
+        Item: { answerId: this.answer.answerId, userId: this.galaxyUser.userId, questionId: this.question.questionId }
+      });
+
+    this.question.numOfClaps = await this.getLiveNumClaps();
+    await ddb.put({ TableName: DDB_TABLES.questions, Item: this.question });
+
+    if (!cancel && (await this.getNumAnswersClappedByUser()) >= 15)
+      await addBadgeToUser(ddb, this.galaxyUser.userId, Badges.LOVE_GIVER);
+
+    return this.question;
+  }
+  private async getLiveNumClaps(): Promise<number> {
+    try {
+      const claps = await ddb.query({
+        TableName: DDB_TABLES.answersClaps,
+        IndexName: 'questionId-userId-index',
+        KeyConditionExpression: 'questionId = :questionId',
+        ExpressionAttributeValues: { ':questionId': this.question.questionId }
+      });
+      return claps.length;
+    } catch (error) {
+      return 0;
+    }
+  }
+  private async isClapped(): Promise<boolean> {
+    try {
+      await ddb.get({
+        TableName: DDB_TABLES.answersClaps,
+        Key: { answerId: this.answer.answerId, userId: this.galaxyUser.userId }
+      });
+      return true;
+    } catch (error) {
+      return false;
+    }
+  }
+
   protected async deleteResource(): Promise<void> {
     if (!this.answer.canUserEdit(this.topic, this.galaxyUser)) throw new RCError('Unauthorized');
 
@@ -172,5 +232,19 @@ class Answers extends ResourceController {
     };
     if (!(await isEmailInBlockList(question.creator.email)))
       await ses.sendTemplatedEmail({ toAddresses: [question.creator.email], template, templateData }, SES_CONFIG);
+  }
+
+  private async getNumAnswersClappedByUser(): Promise<number> {
+    try {
+      const claps = await ddb.query({
+        TableName: DDB_TABLES.answersClaps,
+        IndexName: 'inverted-index',
+        KeyConditionExpression: 'userId = :userId',
+        ExpressionAttributeValues: { ':userId': this.galaxyUser.userId }
+      });
+      return claps.length;
+    } catch (error) {
+      return 0;
+    }
   }
 }
